Error Mitigation/MagiCoder/Data/javax_xml_ws/javax_xml_wsOutputResult.txt
Sample: RespectBindingFeature_3
----------------------------------------------------------------
output:
./Data/javax_xml_ws/javaFiles/RespectBindingFeature_3.java:1: error: package javax.xml.ws does not exist
import javax.xml.ws.RespectBindingFeature;
                   ^
./Data/javax_xml_ws/javaFiles/RespectBindingFeature_3.java:5: error: cannot find symbol
        RespectBindingFeature feature = new RespectBindingFeature();
        ^
  symbol:   class RespectBindingFeature
  location: class RespectBindingFeature_3
./Data/javax_xml_ws/javaFiles/RespectBindingFeature_3.java:5: error: cannot find symbol
        RespectBindingFeature feature = new RespectBindingFeature();
                                            ^
  symbol:   class RespectBindingFeature
  location: class RespectBindingFeature_3
3 errors


================================================================

Sample: WebServiceFeature_2
----------------------------------------------------------------
output:
./Data/javax_xml_ws/javaFiles/WebServiceFeature_2.java:1: error: package javax.xml.ws does not exist
import javax.xml.ws.WebServiceFeature;
                   ^
./Data/javax_xml_ws/javaFiles/WebServiceFeature_2.java:5: error: cannot find symbol
        WebServiceFeature feature = new WebServiceFeature() {
        ^
  symbol:   class WebServiceFeature
  location: class WebServiceFeature_2
./Data/javax_xml_ws/javaFiles/WebServiceFeature_2.java:5: error: cannot find symbol
        WebServiceFeature feature = new WebServiceFeature() {
                                        ^
  symbol:   class WebServiceFeature
  location: class WebServiceFeature_2
./Data/javax_xml_ws/javaFiles/WebServiceFeature_2.java:6: error: method does not override or implement a method from a supertype
            @Override
            ^
4 errors


================================================================

